Fix navbar spacing - logo flush left, proper right padding

--- a/css/style.css
+++ b/css/style.css
@@ -44,9 +44,7 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 0.5rem 0;
-    padding-left: 1rem;
-    padding-right: 4rem;
+    padding: 0.5rem 1.5rem;
     max-width: 100%;
     margin: 0;
     width: 100%;
@@ -61,7 +59,7 @@ body {
     letter-spacing: -1px;
     margin-left: 0;
     background-color: #000000;
-    padding: 5px 10px;
+    padding: 0;
 }
 
 .nav-menu {
